# Glypha

./: .gitignore  CMakeLists.txt  LICENSE.md  Makefile  README.md  bin-convert.c
game/: GLBufferReader.cpp  GLBufferReader.h  GLCursor.cpp  GLCursor.h  GLCursorCocoa.mm  GLCursorQt.cpp  GLCursorWin32.cpp  GLFont.cpp  GLFont.h  GLGame.cpp  GLGame.h  GLImage.cpp  GLImage.h  GLImage_CoreImage.cpp  GLImage_Qt.cpp  GLImage_Win32.cpp  GLImage_libpng.cpp  GLOpenGL.h  GLPoint.h  GLPrefs.cpp  GLPrefs.h  GLRect.cpp  GLRect.h  GLRenderer.cpp  GLRenderer.h  GLResetDialog.cpp  GLResetDialog.h  GLResources.cpp  GLResources.h  GLSounds.cpp  GLSounds.h  GLSounds.mm  GLSoundsCocoa.mm  GLSoundsQt.cpp  GLSoundsQtImp.cpp  GLSoundsQtImp.h  GLSoundsWin32.cpp  GLUtils.cpp  GLUtils.h
haiku/: App.cpp  Makefile  main.cpp
mac/: Info.plist  icon.icns  main.mm
osx/: AppController.h  AppController.mm  Info.plist  main.mm
osx/Glypha.xcodeproj/: project.pbxproj
osx/Glypha.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
osx/Glypha.xcodeproj/xcshareddata/xcschemes/: Glypha.xcscheme
osx/en.lproj/: MainMenu.xib
qt/: Glypha.pro  main.cpp  main.hpp
resources/fonts/: font11.fnt
resources/sounds/: bird.aif  bonus.aif  boom1.aif  boom2.aif  flap.aif  flap2.aif  lightning.aif  music.aif  scrape2.aif  screech.aif  spawn.aif  splash.aif  walk.aif
themes/glyphaiii/images/: background.c  numbers.c  platforms.c  player.c  playerIdle.c  torches.c
themes/glyphaiii/sounds/: bird.c  flap.c  grate.aif  grate.c  screech.c  walk.c
win/: Glypha.sln  main.cpp  resource.h  resources.h  resources.rc
win/Glypha/: Glypha.vcxproj  Glypha.vcxproj.filters  main.cpp
